# muse

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  README.md  db.sqlite3  env.example  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0002_replace_full_name_with_first_last.py
backend/config/: settings.py  urls.py
backend/planner/: models.py  serializers.py  tests.py  urls.py  views.py
backend/planner/management/commands/: seed_budget_categories.py  seed_dev_couple.py  seed_event_types.py
backend/planner/migrations/: 0002_budgetcategory_eventbudget_honeymoonplan_and_more.py  0003_coupleinvite.py  0004_task_notification_comment_activitylog.py  0005_budgetlineitem_is_deleted_event_is_deleted_and_more.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20251124143124_init/: migration.sql
backend/scripts/: e2e_flow.py  gen-secrets.ts
backend/src/: app.ts  auth.ts  config.ts  http.ts  prisma.ts  server.ts  storage.ts
backend/src/middleware/: requireAuth.ts
backend/src/routes/: auth.ts  calendar.ts  events.ts  moodboard.ts
backend/tests/: auth.test.ts  calendar_moodboard.test.ts  events.test.ts  setupEnv.ts  utils.ts
backend_py/: db.sqlite3  pyproject.toml
docs/: PLANNING_PROMPT.txt  architecture.md  db-schema-overview.md  db-schema.sql  mvp-checklist.md  mvp-roadmap.md  (+3 more)
(+32 files in other folders)
